syntax = "proto3";

package rivet.backend.region;

import "proto/common.proto";
import "proto/backend/net.proto";
import "proto/backend/cluster.proto";

message Region {
	reserved 6, 10, 11, 12, 13;

	rivet.common.Uuid region_id = 1;
	bool enabled = 14;
	string nomad_region = 2;
	string nomad_datacenter = 3;
	string provider = 4;
	string provider_region = 5;
	string provider_display_name = 7;
	string region_display_name = 8;
	string name_id = 9;

	rivet.backend.net.Coordinates coords = 15;

	// INHERITED FROM Datacenter
	rivet.backend.cluster.BuildDeliveryMethod build_delivery_method = 100;
}
